[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
tokio = { version = "1.21.2", features = ["full"] }
tokio_kcp = "0.9.3"
anyhow = "1.0.65"
protobuf = "3.2.0"
log = "0.4.17"
log4rs = "1.2.0"
rand = "0.8.5"
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-stream = "0.1.11"
bytes = "1.2.1"
futures = "0.3.24"

[build-dependencies]
protobuf-codegen = "3.2.0"
